# invenio-banners

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_banners/: __init__.py  admin.py  config.py  ext.py  models.py  proxies.py  utils.py  version.py  views.py
invenio_banners/administration/: __init__.py  banners.py
invenio_banners/alembic/: 5e02314da32e_create_invenio_banners_db_table.py  e40d93d99040_create_invenio_banners_branch.py
invenio_banners/records/: __init__.py  api.py  models.py
invenio_banners/resources/: __init__.py  config.py  errors.py  resource.py
invenio_banners/services/: __init__.py  config.py  errors.py  permissions.py  results.py  schemas.py  service.py
invenio_banners/templates/invenio_banners/macros/: banner.html
invenio_banners/templates/semantic-ui/invenio_banners/: banner.html
invenio_banners/translations/: messages.pot
invenio_banners/translations/af/LC_MESSAGES/: messages.po
invenio_banners/translations/ar/LC_MESSAGES/: messages.po
invenio_banners/translations/bg/LC_MESSAGES/: messages.po
invenio_banners/translations/ca/LC_MESSAGES/: messages.po
invenio_banners/translations/cs/LC_MESSAGES/: messages.po
invenio_banners/translations/da/LC_MESSAGES/: messages.po
invenio_banners/translations/de/LC_MESSAGES/: messages.po
invenio_banners/translations/de_AT/LC_MESSAGES/: messages.po
invenio_banners/translations/de_DE/LC_MESSAGES/: messages.po
invenio_banners/translations/el/LC_MESSAGES/: messages.po
invenio_banners/translations/en_AT/LC_MESSAGES/: messages.po
invenio_banners/translations/en_HU/LC_MESSAGES/: messages.po
invenio_banners/translations/es/LC_MESSAGES/: messages.po
invenio_banners/translations/es_CU/LC_MESSAGES/: messages.po
invenio_banners/translations/es_MX/LC_MESSAGES/: messages.po
invenio_banners/translations/et/LC_MESSAGES/: messages.po
invenio_banners/translations/et_EE/LC_MESSAGES/: messages.po
invenio_banners/translations/fa/LC_MESSAGES/: messages.po
invenio_banners/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_banners/translations/fr/LC_MESSAGES/: messages.po
invenio_banners/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_banners/translations/fr_FR/LC_MESSAGES/: messages.po
tests/: conftest.py  test_admin.py  test_invenio_banners.py  test_macro.py  test_models.py  test_views.py
tests/records/: test_disable.py  test_models.py
tests/resources/: conftest.py  test_resources.py
tests/services/: conftest.py  test_services.py
(+24 files in other folders)
