# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2023 CERN.
# Copyright (C)      2023 Graz University of Technology.
#
# Invenio-Banners is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-banners
version = attr: invenio_banners.__version__
description = Invenio-Banners is a module used to create and show banners with useful messages to users.
long_description = file: README.rst, CHANGES.rst
keywords = Invenio Banners
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-banners
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=2.0.0,<3.0.0
    invenio-administration>=1.1.0,<2.0.0

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0
    invenio-app>=1.3.4,<2.0.0
    pytest-black>=0.3.0
    sphinx>=4.5
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_banners = invenio_banners:InvenioBanners
invenio_base.api_apps =
    invenio_banners = invenio_banners:InvenioBanners
invenio_base.api_blueprints =
    invenio_banners = invenio_banners.views:create_banners_api_bp
invenio_db.alembic =
    invenio_banners = invenio_banners:alembic
invenio_db.models =
    invenio_banners = invenio_banners.records.models
invenio_administration.views =
    invenio_banners_list = invenio_banners.administration.banners:BannerListView
    invenio_banners_details = invenio_banners.administration.banners:BannerDetailView
    invenio_banners_edit = invenio_banners.administration.banners:BannerEditView
    invenio_banners_create = invenio_banners.administration.banners:BannerCreateView


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_banners/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_banners/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_banners/translations/messages.pot
output-dir = invenio_banners/translations/

[update_catalog]
input-file = invenio_banners/translations/messages.pot
output-dir = invenio_banners/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile = black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_banners --cov-report=term-missing
testpaths = tests invenio_banners
